UtahLiveDataTest/src/objects/MSPFinancialStage__c.object
<CustomObject>
    <fields>
        <fullName>AwardAmountFormula__c</fullName>
        <formula>VALUE(AwardAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardAmount__c</fullName>
        <label>Award Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeltaAmount__c</fullName>
        <label>Delta Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File Batch</label>
        <referenceTo>FileBatch__c</referenceTo>
        <relationshipLabel>MSP Financial Stages</relationshipLabel>
        <relationshipName>MSP_Financial_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEAComment__c</fullName>
        <label>LEA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSPFinancialBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSP Financial Batch</label>
        <referenceTo>MSPFinancialBatch__c</referenceTo>
        <relationshipLabel>MSP Financial Stages</relationshipLabel>
        <relationshipName>MSP_Financial_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <label>Object Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldAwardedAmount__c</fullName>
        <label>Old Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramComment__c</fullName>
        <label>Program Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>MSP Financial Stages</relationshipLabel>
        <relationshipName>MSP_Financial_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubRecipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSP Financial Stages</relationshipLabel>
        <relationshipName>MSP_Financial_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKeyFormula__c</fullName>
        <formula>Program__c + SubRecipient__c + ProgramCode__c + ObjectCode__c + TEXT(FileBatch__r.FiscalYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <label>MSP Financial Stage</label>
    <nameField>
        <label>MSP Financial Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Financial Stages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>